fix() : Supression du login et register
